...
                      testID={`tab-${route.key}`}
                      onPress={() => {
                        props.jumpTo(route.key);
                        switch (route.key) {
                          case "notebooks":
                            Navigation.routeNeedsUpdate(
                              "Notebooks",
                              Navigation.routeUpdateFunctions.Notebooks
                            );
                            break;
                          case "tags":
                            Navigation.routeNeedsUpdate(
                              "Tags",
                              Navigation.routeUpdateFunctions.Tags
                            );
                            break;
                          default:
                            break;
                        }
...
